--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,7 +4,7 @@ Version: 1.3.1
 Authors@R: c(
     person(
         "Jiefei", "Wang",
-        email = "Martin.Morgan@RoswellPark.org",
+        email = "szwjf08@gmail.com",
         role = c("aut", "cre")
     ),
     person("Martin", "Morgan", role = "aut"))
